--- a/stiliai/portfolio/portf.css
+++ b/stiliai/portfolio/portf.css
@@ -327,9 +327,9 @@ input.input {
     width: 180px;
 }
 
-#navigation ul ul li:hover {
+/* #navigation ul ul li:hover {
 
-}
+} */
 
 #navigation li:hover ul li ul {
     display: none;
@@ -385,7 +385,7 @@ div.blokas img:hover {
 a.btn {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    float: left;
+    /* float: left; */
     cursor: pointer;
     background: #f2f2f2;
     border: 1px solid #CCCCCC;
