--- a/stiliai/portfolio/portf.css
+++ b/stiliai/portfolio/portf.css
@@ -35,9 +35,16 @@
 }
 
 .section8{
-    background-color: wheat;
+    background-color: #f5deb3;
     width       :   100%;
     height      :   200px;
+}
+
+.dropdown{
+    padding-left    : 15px;
+    color           : white;
+    background-color:  #1D809F;
+    min-width: 180px;
 }
 
 .soc-icons{
@@ -158,7 +165,9 @@
 .white-button{
     background-color: #f2f8f3;
     color           : black;
-    padding         : 15px 32px;
+    width           : 200px;
+    height          : 60px;
+    padding         : 10px 10px;
     text-align      : center;
     text-decoration : none;
     display         : inline-block;
@@ -168,7 +177,9 @@
 .blue-button{
     background-color: #1D809F;
     color           : white;
-    padding         : 15px 32px;
+    width           : 150px;
+    height          : 60px; 
+    padding         : 10px 10px;
     text-align      : center;
     text-decoration : none;
     display         : inline-block;
@@ -178,7 +189,9 @@
 .black-button{
     background-color: #070e08;
     color           : white;
-    padding         : 15px 32px;
+    width           : 200px;
+    height          : 60px;
+    padding         : 10px 30px;
     text-align      : center;
     text-decoration : none;
     display         : inline-block;
